--- a/app/Resources/views/map.html.twig
+++ b/app/Resources/views/map.html.twig
@@ -313,8 +313,11 @@ Control Room Log Map
                     {
                         var field_user = marker['field_user'];
                         //icon: "https://chart.apis.google.com/chart?chst=d_map_pin_letter&chld=%20|" + colour;
-                        icon: "https://chart.googleapis.com/chart?chst=d_bubble_icon_text_small&chld=star|bb|"+field_user+"|FFFFFF|000000";
-                        
+                        //icon: "https://chart.googleapis.com/chart?chst=d_bubble_icon_text_small&chld=star|bb|"+field_user+"|FFFFFF|000000";
+                        return {
+                                icon: "https://chart.googleapis.com/chart?chst=d_bubble_icon_text_small&chld=star|bb|"+field_user+"|FFFFFF|000000";
+                            };
+                            
                     } else {
                         var colour = marker['colour'];
                         var logs = marker['logs'];
