--- a/app/Resources/views/map.html.twig
+++ b/app/Resources/views/map.html.twig
@@ -315,7 +315,7 @@ Control Room Log Map
                         //icon: "https://chart.apis.google.com/chart?chst=d_map_pin_letter&chld=%20|" + colour;
                         //icon: "https://chart.googleapis.com/chart?chst=d_bubble_icon_text_small&chld=star|bb|"+field_user+"|FFFFFF|000000";
                         return {
-                                icon: "https://chart.googleapis.com/chart?chst=d_bubble_icon_text_small&chld=star|bb|"+field_user+"|FFFFFF|000000"
+                                icon: "https://chart.apis.google.com/chart?chst=d_map_pin_icon&chld=glyphish_user|fff"
                             };
                             
                     } else {
