modified command scheduler alyout

--- a/app/Resources/JMoseCommandSchedulerBundle/views/layout.html.twig
+++ b/app/Resources/JMoseCommandSchedulerBundle/views/layout.html.twig
@@ -1,10 +1,6 @@
 {% extends 'BathSU.html.twig' %}
 {% block headerbottom %}
 Event Control Command Scheduler
-{% endblock %}
-{% block layout %}
-    {% embed '3-9.html.twig' %}
-        
         {# Succes flash messages #}
         {% for flashMessage in app.session.flashbag.get('success') %}
             <div class="alert alert-success" role="alert">
@@ -18,24 +14,13 @@ Event Control Command Scheduler
                 {{ flashMessage }}
             </div>
         {% endfor %}
-            <div class="jumbotron">
-                <div class="container">
-                    <!-- Example row of columns -->
-                    <div class="row">
-                        <div class="col-md-12">
-                            <h2>{% block title %}{% endblock title %}</h2>
+{% endblock %}
+{% block layout %}
+    {% embed '3-9.html.twig' %}
+        {% block title %}{% endblock title %}</h2>
 
-                            {% block content %}{% endblock content %}
-                        </div>
-                    </div>
-                    <hr>
-                    <!--
-                    <footer>
-                        <p>&copy; Company</p>
-                    </footer>
-                    -->
-                </div>
-            </div><!-- /container -->
+        {% block content %}{% endblock content %}
+
         {% block sidebar %}
             {% include 'sidebar.twig' %}
             {% include 'darksky.html.twig' %}
