fixed layout bug

--- a/app/Resources/JMoseCommandSchedulerBundle/views/layout.html.twig
+++ b/app/Resources/JMoseCommandSchedulerBundle/views/layout.html.twig
@@ -17,7 +17,7 @@ Event Control Command Scheduler
 {% endblock %}
 {% block layout %}
     {% embed '3-9.html.twig' %}
-        {% block title %}{% endblock title %}</h2>
+        {% block title %}{% endblock title %}
 
         {% block content %}{% endblock content %}
 
