Modified people counting chart

--- a/app/Resources/views/peopleCountingLog.html.twig
+++ b/app/Resources/views/peopleCountingLog.html.twig
@@ -8,7 +8,7 @@ People Counting Logs
             <div class="wrapper">
                 <div class="row">
                     <div class="col-md-12">
-                        <h4>Chart</h4>
+                        <h4>Event Occupancy Chart</h4>
                     </div>
                 </div>
                 <div class="row" id="chartsArea">
