--- a/app/Resources/views/peopleCountingLog.html.twig
+++ b/app/Resources/views/peopleCountingLog.html.twig
@@ -13,7 +13,7 @@ People Counting Logs
                 </div>
                 <div class="row" id="chartsArea">
                     <div class="col-md-12">
-                        {% if chart is empty %}
+                        {% if chart is null %}
                             No chart available
                         {% else %}
                             <div id="linechart" style="min-width: 400px; height: 400px; margin: 0 auto"></div>
