--- a/app/Resources/views/log2.html.twig
+++ b/app/Resources/views/log2.html.twig
@@ -141,6 +141,7 @@ Control Room Log
             $('#Logs').DataTable( {
                 "ordering": false,
                 "pageLength": 15,
+                "deferRender": true,
                 "lengthMenu": [ [10, 15, 25, 50, -1], [10, 15, 25, 50, "All"] ]
             });
         });
