--- a/app/Resources/views/log2.html.twig
+++ b/app/Resources/views/log2.html.twig
@@ -137,7 +137,7 @@ Control Room Log
         var oldData;
         
         $(document).ready(function() {
-            //dataPoll();
+            dataPoll();
             $('#Logs').DataTable( {
                 "ordering": false,
                 "pageLength": 15,
