adde unstyled link clss

--- a/app/Resources/views/PeopleCountingModule.html.twig
+++ b/app/Resources/views/PeopleCountingModule.html.twig
@@ -5,7 +5,7 @@
         <div id="PCcollapse" class="panel-collapse collapse in">
             <ul class="list-group">
                 {% for venue in venues %}
-                    <a href="{{ path('people_counting_log') }}"><li class="list-group-item" id="venue-{{ venue.venue_id.id }}">{{ venue.venue_id.name }}: 0</li></a>
+                    <a href="{{ path('people_counting_log') }}" class="link-unstyled"><li class="list-group-item" id="venue-{{ venue.venue_id.id }}">{{ venue.venue_id.name }}: 0</li></a>
                 {% endfor %}
             </ul>
         </div>
