--- a/app/Resources/views/BathSU.html.twig
+++ b/app/Resources/views/BathSU.html.twig
@@ -83,6 +83,11 @@
     border-color: #2e6da4;
 }
 
+.link-unstyled, .link-unstyled:link, .link-unstyled:hover {
+  color: inherit;
+  text-decoration: inherit;
+}
+
 @-webkit-keyframes argh-my-eyes {
     0%   { background-color: #f29896; }
     49% { background-color: #f29896; }
