attempt to not use UTC on highcharts

--- a/app/Resources/views/peopleCountingLog.html.twig
+++ b/app/Resources/views/peopleCountingLog.html.twig
@@ -32,6 +32,24 @@ People Counting Logs
     <script src="//code.highcharts.com/4.1.8/modules/exporting.js"></script>
     {% if chart is defined%}
         <script type="text/javascript">
+            Highcharts.setOptions({
+                chart: {
+                    backgroundColor: {
+                        linearGradient: [0, 0, 500, 500],
+                        stops: [
+                            [0, 'rgb(255, 255, 255)'],
+                            [1, 'rgb(240, 240, 255)']
+                            ]
+                    },
+                    borderWidth: 2,
+                    plotBackgroundColor: 'rgba(255, 255, 255, .9)',
+                    plotShadow: true,
+                    plotBorderWidth: 1
+                },
+                global: {
+                    useUTC: false
+                }
+            });
             {{ chart(chart) }}
         </script>
     {% endif %}
