--- a/app/Resources/views/CtrLogBase.html.twig
+++ b/app/Resources/views/CtrLogBase.html.twig
@@ -30,7 +30,7 @@
     <div class="loader"></div>
     <div class="page-header">
         <div class="row">
-            <h1 class="col-xs-12 col-md-5 text-nowrap">
+            <h1 class="col-xs-12 col-md-4 text-nowrap">
                 {% block headertop %}{% endblock %}
                 <small>
                     {% block headerbottom %}{% endblock %}
@@ -48,10 +48,15 @@
                         </button>
                     </div>
                 {% endif %}
+                <h2 class="col-md-1 text-right hidden-xs hidden-sm">
+                    <div id="HeaderWeatherIcon">
+                        <canvas id="WeatherIcon" width="128" height="128"></canvas>
+                    </div>
+                </h2>
                 <h2 class="col-md-4 text-right hidden-xs hidden-sm">
                     <div id="HeaderClock">
                     </div>
-                </h1>
+                </h2>
         </div>
         <div class="clearfix" style="background-color: #FFFFFF;"></div>
     </div>
