--- a/app/Resources/views/BathSU.html.twig
+++ b/app/Resources/views/BathSU.html.twig
@@ -256,6 +256,7 @@
     <script type="text/javascript"src="{{ asset('assets/vendor/jqueryui/jquery-ui.min.js') }}"></script>
     <script src="https://cdn.datatables.net/1.10.13/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/1.10.13/js/dataTables.bootstrap.min.js"></script>
+    <script type="text/javascript" src="{{ asset('assets/vendor/skycons/skycons.js') }}"></script>
     <script type="text/javascript">
     
         var alertData = null;
