updated weather elements

--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -369,11 +369,13 @@
         
         
     function updateWeather2 ( )
-        {   var skycons = new Skycons({"color": "black"});      
+        {   
+            var skycons = new Skycons({"color": "black"});      
             $.getJSON('{{ path('event_weather') }}', function(data) {
                 $("#SidebarWeather").html("<strong>Weather:</strong> "+data.summary);
                 skycons.set("WeatherIcon", data.icon);
-                skycons.play();                
+                skycons.play();
+                console.log(icon);
             });
         }
         
