Modified weather icon size

--- a/app/Resources/views/CtrLogBase.html.twig
+++ b/app/Resources/views/CtrLogBase.html.twig
@@ -48,11 +48,9 @@
                         </button>
                     </div>
                 {% endif %}
-                <h2 class="col-md-1 text-right hidden-xs hidden-sm">
-                    <div id="HeaderWeatherIcon">
-                        <canvas id="WeatherIcon" width="32" height="32"></canvas>
-                    </div>
-                </h2>
+                <div id="HeaderWeatherIcon" class="col-md-1 text-right hidden-xs hidden-sm">
+                        <canvas id="WeatherIcon" width="64" height="64"></canvas>
+                </div>
                 <h2 class="col-md-3 text-right hidden-xs hidden-sm">
                     <div id="HeaderClock">
                     </div>
