Modified weather icon location

--- a/app/Resources/views/CtrLogBase.html.twig
+++ b/app/Resources/views/CtrLogBase.html.twig
@@ -48,7 +48,7 @@
                         </button>
                     </div>
                 {% endif %}
-                <div id="HeaderWeatherIcon" class="col-md-1 text-right hidden-xs hidden-sm">
+                <div id="HeaderWeatherIcon" class="col-md-1 text-right hidden-xs hidden-sm" style="margin-top:2px;">
                         <canvas id="WeatherIcon" width="64" height="64"></canvas>
                 </div>
                 <h2 class="col-md-3 text-right hidden-xs hidden-sm">
