--- a/app/Resources/views/log2.html.twig
+++ b/app/Resources/views/log2.html.twig
@@ -1,6 +1,6 @@
 {% extends 'BathSU.html.twig' %}
 {% block headerbottom %}
-Control Room Log
+Control Room Dashboard
 {% endblock %}
 {% block layout %}
     {% embed '3-9.html.twig' %}
